# my-python-app

./: .coverage  .pre-commit-config.yaml  Dockerfile  dasdasdas  manage.py  pyproject.toml  pytest.ini
.github/: dependabot.yml
.github/actions/run-container-scan/: action.yml
.github/actions/run-linter/: action.yml
.github/actions/run-security-checks/: action.yml
.github/actions/run-tests/: action.yml
.github/actions/setup-environment/: action.yml
.github/images/python/: Dockerfile
.github/images/ubuntu/: Dockerfile
.github/workflows/: ci-cd-dev.yml  ci-cd.yml  ghcr-test-container-AutoDeployTrigger-4adf0039-0cfc-43cb-acbc-9689f361cad7.yml  label-dependabot.yml  review-environments.yml  staging-AutoDeployTrigger-23ea426d-8925-45bd-a6c0-f091fdcde3a2.yml  staging-AutoDeployTrigger-9683fddb-4518-41c5-911a-ac9bb6f1f4b0.yml  testing-container-AutoDeployTrigger-ff980023-afd5-4858-a1dc-ddba5f1e78e1.yml
config/: db.sqlite3  settings.py
config/config/: settings.py  wsgi.py
my_project/: __init__.py  app.py
tests/: test_app.py  test_django.py
